# pbflookup

./: CMakeLists.txt  README.md  config.cpp  config.h  error.cpp  error.h  global.h  globalobjects.cpp  globalobjects.h  helper.cpp  helper.h  htmloutput.cpp  htmloutput.h  httpserver.cpp  httpserver.h  idtree.h  idtree_impl.h  input-goteborg.txt  input-isle-of-man.txt  input-swedenA.txt  input-swedenB.txt  input-westsweden.txt  input.txt  main.cpp  mapanalysis.cpp  mapanalysis.h  nodetocoord.cpp  nodetocoord.h  osmpbfreader.cpp  osmpbfreader.h  resultgenerator.cpp  resultgenerator.h  scb-lan-kommuner-kod.csv  stopwords-sweden.txt  stopwords-westsweden.txt  stopwords.txt  svgwriter.cpp  svgwriter.h  sweden.config  sweden.cpp  (+21 more)
public/: default.css
tests/: queries-isle-of-man.txt  queries-sweden.txt
